cloud/networking/ddb-proxy-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ddb-proxy
  labels:
    app.kubernetes.io/name: ddb-proxy
    app.kubernetes.io/component: ddb-proxy
    app.kubernetes.io/part-of: foundry
    app.kubernetes.io/managed-by: argocd
  annotations:
    cert-manager.io/cluster-issuer: code-and-quest-de-letsencrypt
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - ddb-proxy.code-and-quest.de
      secretName: ddb-proxy-ingress-tls
  rules:
    - host: ddb-proxy.code-and-quest.de
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: ddb-proxy
                port:
                  name: http
