cloud/networking/foundry-ingress-salty.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: foundry-saltysausage
  labels:
    app.kubernetes.io/name: foundry-saltysausage
    app.kubernetes.io/component: foundry
    app.kubernetes.io/part-of: foundry-saltysausage
    app.kubernetes.io/managed-by: argocd
  annotations:
    cert-manager.io/cluster-issuer: saltysausage-com-letsencrypt
    nginx.ingress.kubernetes.io/proxy-body-size: 64m
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - vtt.saltysausage.com
      secretName: foundry-saltysausage-ingress-tls
  rules:
    - host: vtt.saltysausage.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: foundry-saltysausage
                port:
                  name: http
